Update for Java 19 EA build